# ghost-agent

./: README.md  pyproject.toml  smoke_task.json
ghost-agent/ghost_agent/: __init__.py  schema.py
ghost-agent/ghost_agent.egg-info/: SOURCES.txt  top_level.txt
ghost-agent/ghost_agent/models/: ollama.py
ghost-agent/ghost_agent/tools/: __init__.py  cmd_tools.py
ghost-agent/ghost_agent/utils/: logging.py  watch.py
ghost-agent/memories/: index.json
ghost-agent/tests/: test_schema.py
ghost-agent/workspaces/mvp_smoketest_001/: task.json
ghost_agent/: cli.py  orchestrator.py
ghost_agent.egg-info/: PKG-INFO  entry_points.txt
ghost_agent/memory/: store.py
ghost_agent/models/: __init__.py
ghost_agent/tools/: fs_tools.py  git_tools.py
ghost_agent/utils/: __init__.py
memories/lessons/: mvp_smoketest_001.md
tests/: test_cmd_tools.py  test_fs_tools.py
workspaces/mvp_smoketest_001/: state.json
