[project]
name = "ghost-agent"
version = "0.1.0"
description = "Local Codex-like coding agent"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "requests>=2.31",
]

[project.scripts]
ghost = "ghost_agent.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ghost_agent*"]
exclude = ["memories*", "workspaces*"]
